--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,6 @@ on:
   schedule: # execute every 12 hours
     - cron: "* */12 * * *"
   workflow_dispatch:
-
 jobs:
   build:
     name: Jobs to update datas
@@ -14,13 +13,12 @@ jobs:
       - uses: Platane/snk@master
         id: snake-gif
         with:
-          github_user_name: samuelsilva12
+          github_user_name: rafaballerini
           svg_out_path: dist/github-contribution-grid-snake.svg
-
+          
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  
